--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 
 /* font sizes */
+@font-face {
+  font-family: 'Helvetica';
+  src: url('./fonts/Helvetica.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('./fonts/Helvetica-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
 .fs {
   font-size: 10px;
 }
