--- a/src/components/Max/hero/heroMax.module.css
+++ b/src/components/Max/hero/heroMax.module.css
@@ -1,5 +1,4 @@
 .mainContainer {
-  background-image: url("../../../assets/hhh.png");
   background-size: cover;
   position: relative;
   width: 100vw;
@@ -34,7 +33,7 @@
   display: flex;
   justify-content: center;
   align-items: center !important;
-  padding: 15px;
+  padding: 8px;
 
   border-radius: 20px 20px 0px 0px;
   -webkit-border-radius: 20px 20px 0px 0px;
@@ -55,11 +54,12 @@
   position: absolute;
   bottom: 5px;
   left: 80px;
-  letter-spacing: 10px;
+  letter-spacing: 0;
   font-size: 70px;
-  opacity: 0.3;
+  opacity: 0.4;
   color: white;
   font-weight: bold;
+  z-index: 8 !important;
 }
 @media screen and (max-width: 767px) {
   .pageName {
