--- a/src/components/home/video/video.module.css
+++ b/src/components/home/video/video.module.css
@@ -1,13 +1,4 @@
 .mainDiv {
-  background-image: url("../../../assets/hero.png");
-  width: 100vw;
-  min-height: 100vh;
-  background-size: cover;
-  padding: 25px;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  align-items: center;
 }
 
 .text {
@@ -98,26 +89,19 @@
     font-size: 18px;
   }
 }
-.app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw !important;
-  position: relative;
-}
 .videoBackground {
   position: relative;
-  width: 100%;
-  height: 100%;
 }
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
+
 .text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   text-align: center;
   color: white;
   z-index: 1;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
 }
