--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -61,8 +61,8 @@
   right: 135px;
 }
 .ltrStyle::before {
-  width: 250%;
-  left: 60px;
+  width: 210%;
+  left: 70px;
 }
 
 @media screen and (max-width: 767px) {
@@ -79,4 +79,9 @@
   width: 23px !important;
   height: 23px !important;
   object-fit: cover !important;
+}
+.logo {
+  width: 87px;
+  height: 36px;
+  object-fit: contain;
 }
