--- a/src/components/utils/authImg/authImg.module.css
+++ b/src/components/utils/authImg/authImg.module.css
@@ -53,6 +53,9 @@
 }
 .icon {
   color: #acbcd8;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
 }
 .box {
   background-color: rgba(19, 0, 90, 1);
@@ -93,4 +96,9 @@
   width: 15px;
   height: 15px;
   object-fit: contain;
+}
+.phoneIcon {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
 }
