--- a/src/components/cart/cartItems/cartItems.module.css
+++ b/src/components/cart/cartItems/cartItems.module.css
@@ -28,3 +28,12 @@
   height: 20px;
   object-fit: contain;
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, blue, 0 0.6);
+  z-index: 88888;
+}
