--- a/src/components/Prochart/managment/managment.module.css
+++ b/src/components/Prochart/managment/managment.module.css
@@ -31,3 +31,37 @@
     width: 100% !important;
   }
 }
+.btn {
+  min-width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 15px;
+  background-color: #003684;
+  border-radius: 26px;
+  color: white;
+  border: none;
+  width: fit-content;
+  -webkit-border-radius: 26px;
+  -moz-border-radius: 26px;
+  -ms-border-radius: 26px;
+  -o-border-radius: 26px;
+}
+.btnTwo {
+  min-width: 170px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 15px;
+  background-color: #003684;
+  border-radius: 26px;
+  color: white;
+  border: none;
+  width: fit-content;
+  -webkit-border-radius: 26px;
+  -moz-border-radius: 26px;
+  -ms-border-radius: 26px;
+  -o-border-radius: 26px;
+}
