--- a/src/components/home/video/video.module.css
+++ b/src/components/home/video/video.module.css
@@ -1,6 +1,3 @@
-.mainDiv {
-}
-
 .text {
   color: white;
   padding-right: 42px;
@@ -89,19 +86,40 @@
     font-size: 18px;
   }
 }
-.videoBackground {
-  position: relative;
-}
 
 .text {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.videocontainer {
+  width: 100vw;
+  height: 100vh; /* Set it to 100vh for full viewport height */
+  position: relative;
+  z-index: -1;
+  overflow: hidden; /* Hide overflowing video content */
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  z-index: 1;
 }
