--- a/src/components/recommendations/recommendationCard.module.css
+++ b/src/components/recommendations/recommendationCard.module.css
@@ -33,8 +33,8 @@
 } */
 .mainImg {
   width: 100%;
-  height: 100px;
-  object-fit: contain;
+  height: 70px;
+  object-fit: cover;
 }
 .btn {
   width: 50% !important;
