--- a/src/index.css
+++ b/src/index.css
@@ -266,3 +266,8 @@ ul {
   width: 100%;
   height: 100%;
 }
+.swiper-button-next,
+.swiper-button-prev {
+ 
+  color: var(--gradientBackground) !important;
+}
