--- a/src/components/recommendations/recommendationCard.module.css
+++ b/src/components/recommendations/recommendationCard.module.css
@@ -31,9 +31,10 @@
 
   background-color: #003684;
 } */
+
 .mainImg {
   width: 100%;
-  height: 70px;
+  height: 120px;
   object-fit: cover;
 }
 .btn {
@@ -83,9 +84,9 @@
   bottom: 60px;
   right: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 50px;
+  width: 70%;
 }
 .btnContainer {
   width: 100%;
