--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,8 @@ ul {
 }
 .swiper-button-next,
 .swiper-button-prev {
- 
   color: var(--gradientBackground) !important;
+}
+.pointer {
+  cursor: pointer;
 }
