--- a/src/components/layout/nav/nav.module.css
+++ b/src/components/layout/nav/nav.module.css
@@ -355,3 +355,21 @@
   height: 35px;
   object-fit: cover;
 }
+.length {
+  position: absolute;
+  bottom: 0;
+  left: -8px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--whiteGreen);
+  color: white;
+  font-weight: bold;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
