--- a/src/components/home/video/video.module.css
+++ b/src/components/home/video/video.module.css
@@ -94,9 +94,7 @@
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
   z-index: 1;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
@@ -105,10 +103,10 @@
 }
 .videocontainer {
   width: 100vw;
-  height: 100vh; /* Set it to 100vh for full viewport height */
+  height: 100vh; 
   position: relative;
   z-index: -1;
-  overflow: hidden; /* Hide overflowing video content */
+  /* overflow: hidden;  */
 }
 .overlay {
   position: absolute;
@@ -117,9 +115,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  
   z-index: 1;
 }
