--- a/src/components/askAhmed/chat/chat.module.css
+++ b/src/components/askAhmed/chat/chat.module.css
@@ -2,7 +2,8 @@
   border: 1px solid #dcdcdc;
   box-shadow: 0px 17px 20px #00000012;
   border-radius: 18px;
-
+  height: 400px;
+  overflow-y: scroll;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
   -ms-border-radius: 18px;
