--- a/src/components/layout/nav/nav.module.css
+++ b/src/components/layout/nav/nav.module.css
@@ -373,3 +373,18 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+.pp {
+  width: 45px;
+  height: 45px;
+  object-fit: cover;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.menuBtn {
+  border: none !important;
+  background-color: transparent !important;
+  text-transform: capitalize;
+}
