--- a/src/components/askAhmed/chat/chat.module.css
+++ b/src/components/askAhmed/chat/chat.module.css
@@ -2,7 +2,10 @@
   border: 1px solid #dcdcdc;
   box-shadow: 0px 17px 20px #00000012;
   border-radius: 18px;
-  height: 400px;
+  height: 500px;
+  
+}
+.scroll {
   overflow-y: scroll;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
