--- a/src/components/courseDetails/reviews/reviews.module.css
+++ b/src/components/courseDetails/reviews/reviews.module.css
@@ -20,11 +20,15 @@
   position: absolute;
   right: 0;
   right: 0px;
-  color: #1c86c0;
+ 
   top: 30%;
   transform: translateY(-30%);
   -webkit-transform: translateY(-30%);
   -moz-transform: translateY(-30%);
   -ms-transform: translateY(-30%);
   -o-transform: translateY(-30%);
+}
+.customNextButton ,
+.customBrevButton {
+ 
 }
