--- a/src/components/utils/header/Header.module.css
+++ b/src/components/utils/header/Header.module.css
@@ -1,25 +1,24 @@
-.mainDiv {
-  background-color: #f4f7fc;
-  position: relative;
-  overflow: hidden;
-}
-
-
 .link {
   display: inline-block !important;
   text-align: center;
   padding: 14px !important;
-  margin: 0 15px !important;
   text-decoration: none;
   font-size: 15px;
+  margin-top: 4px;
+  transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
 }
 .link:hover {
   color: #003684 !important;
+  font-weight: bold;
 }
 .active {
   color: #003684 !important;
   position: relative;
-  font-family: "Shamel";
+  font-weight: bold;
 }
 .active::before {
   content: "";
@@ -31,14 +30,16 @@
   width: 100%;
 }
 .menu {
+  background-color: #f4f7fc;
   text-align: center;
-  padding: 15px;
   overflow: auto;
   white-space: nowrap;
-  margin-bottom: 25px !important;
+  margin-bottom: 10px !important;
+  border-bottom: 1px solid #eee !important;
 }
 .menu::-webkit-scrollbar {
-  width: 6px; /* You can adjust the width as needed */
+  width: 6px;
+  height: 3px; /* You can adjust the width as needed */
 }
 .menu::-webkit-scrollbar-thumb {
   background-color: var(--darkGreen); /* Change the color to your preference */
