--- a/src/index.css
+++ b/src/index.css
@@ -266,27 +266,48 @@ ul {
   width: 100%;
   height: 100%;
 }
-.swiper-button-next,
+/* .swiper-button-next,
 .swiper-button-prev {
   color: var(--gradientBackground) !important;
-}
+} */
 .pointer {
   cursor: pointer;
 }
 
-.swiper-button-next::after , .swiper-button-prev::after {
- font-size: 12px;
- margin-left: 20px;
- width: 30px;
- height: 30px;
- padding: 4px;
- border-radius: 50%;
- border: 1px solid var(--gradientBackground);
- display: flex;
- justify-content: center;
- align-items: center;
- -webkit-border-radius: 50%;
- -moz-border-radius: 50%;
- -ms-border-radius: 50%;
- -o-border-radius: 50%;
+/* .swiper-button-next::after,
+.swiper-button-prev::after {
+  margin-left: 20px;
+
+  border-radius: 50%;
+  border: 1px solid var(--gradientBackground);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+} */
+.swiper-button-next,
+.swiper-button-prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  width: 35px;
+  height: 35px;
+  background-color: var(--gradientBackground);
+  border: 1px solid var(--gradientBackground);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 20px;
+  color: white;
+}
+.swiper-button-prev {
 }
