--- a/src/components/courseDetails/reviews/reviews.module.css
+++ b/src/components/courseDetails/reviews/reviews.module.css
@@ -1,9 +1,16 @@
-.main {
+.mainBox {
   background-color: #FBFBFB;
+  padding: 14px;
+  position: relative;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 .avImg {
-  width: 95px;
-  height: 95px;
+  width: 65px;
+  height: 65px;
   object-fit: cover;
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -12,9 +19,13 @@
   -o-border-radius: 50%;
 }
 .coma {
-  width: 80px;
-  height: 80px;
+  position: absolute;
+  top: -100px;
+  left: 4px;
+  width: 81px;
+  height: 180px;
   object-fit: contain;
+  vertical-align: baseline;
 }
 .arrow {
   position: absolute;
@@ -27,8 +38,4 @@
   -moz-transform: translateY(-30%);
   -ms-transform: translateY(-30%);
   -o-transform: translateY(-30%);
-}
-.customNextButton ,
-.customBrevButton {
- 
 }
