--- a/src/index.css
+++ b/src/index.css
@@ -288,7 +288,7 @@ ul {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 } */
-.swiper-button-next,
+/* .swiper-button-next,
 .swiper-button-prev {
   display: flex;
   justify-content: center;
@@ -308,6 +308,6 @@ ul {
 .swiper-button-prev::after {
   font-size: 20px;
   color: white;
-}
+} */
 .swiper-button-prev {
 }
