--- a/src/components/courseDetails/reviews/reviews.module.css
+++ b/src/components/courseDetails/reviews/reviews.module.css
@@ -1,5 +1,5 @@
 .mainBox {
-  background-color: #FBFBFB;
+  background-color: #fbfbfb;
   padding: 14px;
   position: relative;
   border-radius: 7px;
@@ -11,7 +11,7 @@
 .avImg {
   width: 65px;
   height: 65px;
-  object-fit: cover;
+  object-fit: c;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -20,10 +20,10 @@
 }
 .coma {
   position: absolute;
-  top: -100px;
-  left: 4px;
-  width: 81px;
-  height: 180px;
+  top: -80px;
+  left: 15px;
+  width: 51px;
+  height: 130px;
   object-fit: contain;
   vertical-align: baseline;
 }
@@ -31,7 +31,7 @@
   position: absolute;
   right: 0;
   right: 0px;
- 
+
   top: 30%;
   transform: translateY(-30%);
   -webkit-transform: translateY(-30%);
