--- a/src/components/layout/nav/nav.module.css
+++ b/src/components/layout/nav/nav.module.css
@@ -1,19 +1,13 @@
 .navContainer {
-  position: absolute;
+   position: fixed;
+  
   top: 0;
   left: 0;
   width: 100vw;
   z-index: 10;
 }
-@media screen and (max-width: 600px) {
-  .navContainer {
-    position: fixed;
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 3, 43, 1) 20%,
-      rgba(19, 0, 90, 1) 100%
-    );
-  }
+.bg {
+   background-color: #003684 ;
 }
 .logo {
   width: 87px;
