--- a/src/components/forexDetails/accountDetails/accountDetails.module.css
+++ b/src/components/forexDetails/accountDetails/accountDetails.module.css
@@ -32,3 +32,13 @@
   background-color: transparent !important;
   text-transform: capitalize;
 }
+.pp {
+  width: 45px;
+  height: 45px;
+  object-fit: cover;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
