--- a/src/components/wallet/walletDetails.module.css
+++ b/src/components/wallet/walletDetails.module.css
@@ -3,7 +3,7 @@
   width: 130px;
   padding: 10px;
   border-radius: 10px;
- 
+
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
@@ -16,4 +16,21 @@
 
     rgba(1, 36, 86, 1) 100%
   ) !important;
+}
+.btn {
+  min-width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 15px;
+  background-color: #003684;
+  border-radius: 26px;
+  color: white;
+  border: none;
+  width: fit-content;
+  -webkit-border-radius: 26px;
+  -moz-border-radius: 26px;
+  -ms-border-radius: 26px;
+  -o-border-radius: 26px;
 }
