--- a/src/index.css
+++ b/src/index.css
@@ -296,7 +296,6 @@ ul {
   padding: 4px;
   width: 25px;
   height: 25px;
-
   background-color: transparent;
   border: 1px solid #1c86c0;
   border-radius: 50%;
@@ -313,21 +312,22 @@ ul {
 }
 
 .custom-table {
-  background:linear-gradient( to bottom right, rgba(11, 48, 101, 1) 30%, rgba(1, 36, 86, 1) 100% );
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 18px;
-  -webkit-border-radius: 18px;
-  -moz-border-radius: 18px;
-  -ms-border-radius: 18px;
-  -o-border-radius: 18px;
+  box-shadow: 0px 17px 20px #00000012;
+  border: 1px solid #dcdcdc;
+  border-radius: 22px;
+  padding-bottom: 10px;
+  -webkit-border-radius: 22px;
+  -moz-border-radius: 22px;
+  -ms-border-radius: 22px;
+  -o-border-radius: 22px;
 }
 
 .table-header {
   display: flex;
-  color: white;
+
   font-weight: bold;
   border-bottom: 1px solid white;
 }
@@ -336,22 +336,23 @@ ul {
   display: flex;
 }
 .table-row:not(:last-child) {
-    border-bottom: 1px solid #ddd;
-
+  border-bottom: 1px solid #ddd;
 }
 .table-cell {
   flex: 1;
   padding: 8px;
   text-align: center;
-  color: white;
+  color: black !important;
 }
-
+.table-cell.header {
+  color: var(--darkGreen) !important;
+}
 /* Media queries for responsiveness */
 @media (max-width: 600px) {
   .custom-table {
     flex-direction: column;
   }
-  
+
   .table-row {
     flex-direction: column;
   }
@@ -359,20 +360,18 @@ ul {
   .table-header {
     display: none;
   }
-  
- 
 }
 
 /* Add more media queries for different screen sizes if needed */
 .customLink {
-  font-size: 12px;
+  font-size: 10px;
   text-transform: lowercase !important;
 }
 .customBtn {
   width: 130px;
   padding: 10px;
   background-color: white;
-  border: 1px solid #00032b ;
+  border: 1px solid #00032b;
   color: #00032b;
   display: flex;
   justify-content: center;
