--- a/src/components/home/video/video.module.css
+++ b/src/components/home/video/video.module.css
@@ -1,120 +1,31 @@
-.text {
-  color: white;
-  padding-right: 42px;
-}
-@media screen and (max-width: 767px) {
-  .text {
-    padding-right: 22px;
-  }
-}
-.btn {
-  border: none;
-  padding: 7px 15px;
-  width: fit-content;
-  background-color: transparent !important;
-  transition: 0.3s;
-  height: 43px;
-  border-radius: 20px;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-}
-.arrowContainer {
-  width: 35px;
-  height: 35px;
-  background-color: var(--backgroundColor);
-  color: white;
+.mainDiv {
+  width: 100vw;
+  height: 400px;
+  background-color: var(--gradientBackground);
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
 }
-.btn:hover {
-  background-color: var(--gradientBackground) !important;
-}
-.btn:hover .arrowContainer {
-  background-color: transparent !important;
-}
-.playerImg {
-  width: 180px;
-  object-fit: contain;
-  height: 50px;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
-}
-
-.playerImg:hover {
-  transform: scale(0.8);
-  -webkit-transform: scale(0.8);
-  -moz-transform: scale(0.8);
-  -ms-transform: scale(0.8);
-  -o-transform: scale(0.8);
-}
-.success {
-  font-size: 35px;
-}
-@media screen and (max-width: 767px) {
-  .success {
-    font-size: 18px;
+@media screen and (max-width : 767px) {
+  .mainDiv {
+    height: auto;
   }
 }
-.percentage {
-  font-size: 36px;
-}
-@media screen and (max-width: 767px) {
-  .percentage {
-    font-size: 18px;
-  }
-}
-.chances {
-  font-size: 30px;
-}
-@media screen and (max-width: 767px) {
-  .chances {
-    font-size: 18px;
-  }
-}
-
-.text {
+/* .mainDiv::before {
+  content: "";
   position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+} */
+
+.overlay {
+ position: absolute;
+ background-color: rgba(0, 0, 0, 0.7);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
   color: white;
-  
-  z-index: 1;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-}
-.videocontainer {
-  width: 100vw;
-  height: 100vh; 
-  position: relative;
-  z-index: -1;
-  /* overflow: hidden;  */
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  
-  z-index: 1;
+  text-align: center;
+  font-size: 24px;
 }
