--- a/src/components/afilatorDashboard/afilatorDashboard.module.css
+++ b/src/components/afilatorDashboard/afilatorDashboard.module.css
@@ -17,3 +17,20 @@
     rgba(1, 36, 86, 1) 100%
   ) !important;
 }
+.walletContainer {
+  min-width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 15px;
+  background-color: #003684;
+  border-radius: 26px;
+  color: white;
+  border: none;
+  width: fit-content;
+  -webkit-border-radius: 26px;
+  -moz-border-radius: 26px;
+  -ms-border-radius: 26px;
+  -o-border-radius: 26px;
+}
