--- a/src/components/askAhmed/chat/chat.module.css
+++ b/src/components/askAhmed/chat/chat.module.css
@@ -5,7 +5,11 @@
   height: 500px;
   overflow-y: scroll;
 }
-.scroll {
+@media screen and (max-width : 767px) {
+  .mainContainer {
+    height: auto;
+  
+  }
 }
 .border {
   border-bottom: 1px solid #dcdcdc;
