remove static data at header details component and handle data from api , fix design issue at mobile view on details page

--- a/src/components/deals/dealsHeader/DealsHeader.module.css
+++ b/src/components/deals/dealsHeader/DealsHeader.module.css
@@ -1,6 +1,6 @@
 .mainContainer {
   border-bottom: 1px solid gray;
-  /* height: 130px; */
+ 
 }
 .border::before {
   content: "";
@@ -10,4 +10,9 @@
   width: 1px;
   height: calc(100% + 10px);
   background-color: gray;
+}
+@media screen and (max-width : 767px) {
+  .border::before {
+    opacity: 0;
+  }
 }
