--- a/src/components/utils/Spinner/spinner.module.css
+++ b/src/components/utils/Spinner/spinner.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 55555;
+  z-index: 55555555;
   background-color: white;
   display: flex;
   justify-content: center;
