--- a/src/components/recommendations/recommendationCard.module.css
+++ b/src/components/recommendations/recommendationCard.module.css
@@ -11,27 +11,6 @@
   -o-border-radius: 16px;
 }
 
-/* .secondContainer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 10px;
-  bottom: 0;
-  right: 0;
-  z-index: 2;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-} */
-/* .goalContainer {
-  padding: 7px 15px !important;
-  display: inline-block;
-
-  background-color: #003684;
-} */
-
 .mainImg {
   width: 100%;
   height: 120px;
@@ -68,13 +47,15 @@
   width: 1px;
   height: 100%;
   background-color: white;
+  opacity: 0.4 !important;
 }
 @media screen and (max-width: 767px) {
   .stopContainer::before {
     opacity: 0;
   }
 }
-.goalContainer {
+.goalContainerrtl,
+.goalContainerLtr {
   background: linear-gradient(
     to bottom left,
     rgba(0, 54, 132, 0.7) 30%,
@@ -82,11 +63,17 @@
   );
   position: absolute;
   bottom: 60px;
-  right: 0;
+
   display: flex;
   align-items: center;
   height: 50px;
   width: 70%;
+}
+.goalContainerrtl {
+  right: 0;
+}
+.goalContainerLtr {
+  left: 0;
 }
 .btnContainer {
   width: 100%;
