--- a/src/components/utils/blogCard/blogCard.module.css
+++ b/src/components/utils/blogCard/blogCard.module.css
@@ -1,9 +1,11 @@
 .mainContainer {
   overflow: hidden;
+  width: 310px !important;
   position: relative;
  background: linear-gradient(to right, #00032b, #13005a);
   height: 400px;
 }
+
 .mainImg {
   width: 100%;
   height: 300px;
