--- a/src/components/forexCalc/calcDetails.module.css
+++ b/src/components/forexCalc/calcDetails.module.css
@@ -17,3 +17,23 @@
 .border {
   border: 1px solid #ddd;
 }
+.mainContainer {
+  border: 1px solid #dcdcdc;
+  box-shadow: 0px 17px 20px #00000012;
+  border-radius: 18px;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  -ms-border-radius: 18px;
+  -o-border-radius: 18px;
+}
+.btn {
+  padding: 7px 15px;
+  color: white !important;
+  width: fit-content;
+  background-color: #003684;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
