--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
+/* public styles */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box !important;
+}
+body {
+  overflow-x: hidden !important;
+  font-family: "Tajawal", sans-serif;
+  text-transform: capitalize !important;
+}
+html {
+  text-transform: capitalize !important;
+  font-family: "Tajawal", sans-serif;
+}
+a {
+  text-decoration: none !important;
+  color: black !important;
+}
+ul {
+  list-style-type: none;
+}
+/* global variables */
+:root {
+  --backgroundColor: #00032b;
+  --darkGreen: #0ab46e;
+  --whiteGreen: #35e79e;
+  --gradientBackground: #003684;
+}
+
+/* utility classes */
 .fs {
   font-size: 10px;
 }
@@ -87,7 +118,6 @@
     font-size: 40px;
   }
 }
-
 .fs52 {
   font-size: 52px;
 }
@@ -104,36 +134,6 @@
     font-size: 50px;
   }
 }
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box !important;
-}
-
-body {
-  overflow-x: hidden !important;
-  font-family: "Tajawal", sans-serif;
-  text-transform: capitalize !important;
-}
-html {
-  text-transform: capitalize !important;
-  font-family: "Tajawal", sans-serif;
-}
-/* global variables */
-:root {
-  --backgroundColor: #00032b;
-  --darkGreen: #0ab46e;
-  --whiteGreen: #35e79e;
-  --gradientBackground: #003684;
-}
-a {
-  text-decoration: none !important;
-  color: black !important;
-}
-ul {
-  list-style-type: none;
-}
-/* utility classes */
 .green {
   color: var(--darkGreen);
 }
@@ -228,28 +228,6 @@ ul {
   -ms-border-radius: 18px;
   -o-border-radius: 18px;
 }
-.dropdown-toggle::after {
-  display: none;
-}
-
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal {
-  margin-top: 25px !important;
-}
-
-.swiper-pagination-bullet {
-  width: 15px;
-  height: 15px;
-
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-}
-.swiper-pagination-bullet-active {
-  background-color: var(--whiteGreen) !important;
-}
 .error {
   font-size: 13px;
   color: red;
@@ -258,51 +236,6 @@ ul {
   width: 100%;
   height: 100%;
 }
-/* .swiper-button-next,
-.swiper-button-prev {
-  color: var(--gradientBackground) !important;
-} */
-.pointer {
-  cursor: pointer;
-}
-
-/* .swiper-button-next::after,
-.swiper-button-prev::after {
-  margin-left: 20px;
-
-  border-radius: 50%;
-  border: 1px solid var(--gradientBackground);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-}  */
-.swiper-button-next,
-.swiper-button-prev {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4px;
-  width: 25px;
-  height: 25px;
-  background-color: transparent;
-  border: 1px solid #1c86c0;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-size: 12px;
-  color: #1c86c0;
-}
-
 .custom-table {
   display: flex;
   flex-direction: column;
@@ -316,14 +249,12 @@ ul {
   -ms-border-radius: 22px;
   -o-border-radius: 22px;
 }
-
 .table-header {
   display: flex;
 
   font-weight: bold;
   border-bottom: 1px solid white;
 }
-
 .table-row {
   display: flex;
 }
@@ -339,7 +270,6 @@ ul {
 .table-cell.header {
   color: var(--darkGreen) !important;
 }
-/* Media queries for responsiveness */
 @media (max-width: 600px) {
   .custom-table {
     flex-direction: column;
@@ -353,8 +283,6 @@ ul {
     display: none;
   }
 }
-
-/* Add more media queries for different screen sizes if needed */
 .customLink {
   font-size: 10px;
   text-transform: lowercase !important;
@@ -374,9 +302,6 @@ ul {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.dropdown-menu.show {
-  text-align: start !important;
-}
 .dealsLink {
   background-color: white;
   display: flex;
@@ -389,7 +314,7 @@ ul {
   cursor: pointer;
 }
 .otp-input {
-  width: 120px;
+  width: 60px;
   height: 40px;
   font-size: 20px;
   border: 2px solid #ccc;
@@ -397,8 +322,53 @@ ul {
   margin: 0 5px;
   text-align: center;
 }
-/* Custom focus style for OTP input */
 .otp-input:focus {
   outline: none;
-  border-color: #0ab46e; /* Change focus border color */
+  border-color: #0ab46e;
+}
+/* drop down bootstrap */
+.dropdown-toggle::after {
+  display: none;
+}
+.dropdown-menu.show {
+  text-align: start !important;
+}
+/* react swiper */
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  margin-top: 25px !important;
+}
+.swiper-pagination-bullet {
+  width: 15px;
+  height: 15px;
+
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--whiteGreen) !important;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+  border: 1px solid #1c86c0;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 12px;
+  color: #1c86c0;
 }
