--- a/src/components/utils/orderStatus/orderStatus.module.css
+++ b/src/components/utils/orderStatus/orderStatus.module.css
@@ -10,6 +10,11 @@
 .imgContainer {
   width: 50%;
 }
+@media screen and (max-width: 767px) {
+  .imgContainer {
+    width: 100%;
+  }
+}
 .mainImg {
   width: 100%;
   height: 350px;
