--- a/src/components/Prochart/package/modal.module.css
+++ b/src/components/Prochart/package/modal.module.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
+
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -16,9 +16,10 @@
   );
   display: flex;
   justify-content: center;
-  align-items: center;
-  z-index: 2000000;
+  align-items: center !important;
+  z-index: 50;
 }
+
 .show {
   left: 0;
 }
@@ -31,12 +32,18 @@
   border: 1px solid #c8c8c8;
   border-radius: 29px;
   position: relative;
-  z-index: 1111111;
+  z-index: 60;
   transition: 3s;
   -webkit-transition: 3s;
   -moz-transition: 3s;
   -ms-transition: 3s;
   -o-transition: 3s;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    height: 500px;
+    overflow-y: scroll;
+  }
 }
 .showModal {
   opacity: 1;
@@ -98,7 +105,6 @@
 }
 .main {
   width: 92%;
-  /* height: 250px; */
   border: 1px solid #dfdfdf;
   border-radius: 26px;
   margin: auto !important;
@@ -198,6 +204,12 @@
   -moz-border-radius: 21px;
   -ms-border-radius: 21px;
   -o-border-radius: 21px;
+}
+@media screen and (max-width: 767px) {
+  .buyBtn,
+  .cartBtn {
+    width: 60%;
+  }
 }
 .buyBtn {
   background: linear-gradient(to right, #1eca83, #0ea564);
