--- a/src/components/Reg/regmodal/regModal.module.css
+++ b/src/components/Reg/regmodal/regModal.module.css
@@ -24,17 +24,15 @@
   width: 550px !important;
   background-color: white;
   margin: auto !important;
-  border-radius: 25px;
+
   padding: 12px;
+  height: 400px;
+  overflow-y: scroll;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
 }
 @media screen and (max-width: 600px) {
   .modal {
